2008-07-27  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/manual/strcompat.texi: no invariant sections for debian
	* m4/.cvsignore: more libtool files to ignore

2008-07-23  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strcompat.refs: update references

2008-07-11  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: documented BUG 006.
	* src/kernel/liscompat.c: fixed BUG 006.

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strcompat.refs: update references

2008-05-26  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strcompat.refs: update references
	* src/kernel/liscompat.c: fixed bug in lis_register_strdev().
	* src/manual/bugs.texi: documented bug

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: updates for release
	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* strcompat.lsm.in: updates for release
	* strcompat.spec.in: updates for release
	* debian/changelog: updates for release
	* debian/mscript_header.in: updates for release
	* debian/rules.in: updates for release
	* debian/strcompat-core.postinst.in: updates for release
	* debian/strcompat-core.postrm.in: updates for release
	* debian/strcompat-core.preinst.in: updates for release
	* debian/strcompat-core.prerm.in: updates for release
	* debian/strcompat-init.postinst.in: updates for release
	* debian/strcompat-init.preinst.in: updates for release

2008-05-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* doc/manual/prerequisites.texi: added strx25 sub-package

2008-04-28  Brian Bidulock  <bidulock@openss7.org>
